fixed text alignment for farsi and pashto

--- a/style.css
+++ b/style.css
@@ -454,6 +454,9 @@ body.loaded #loading-screen {
   }
 }
 
+.rtl {
+  text-align: right;
+}
 
 
 
